feat(scheduler): add manual batch trigger with logical schedule time
- Add batch trigger API supporting time range for CRON/FIX_RATE/FIX_DELAY jobs
- Add preview API to show estimated trigger times before execution
- Implement trigger modal with immediate/scheduled mode selection
- Generate logical schedule_time for each instance based on job configuration
- Cap batch instances to 100 to prevent abuse
- Rename environment variables from XXL_JOB_* to ORTH_* prefix:
  - ORTH_JOB_ID, ORTH_JOB_PARAM, ORTH_LOG_ID
  - ORTH_SCHEDULE_TIME (logical), ORTH_TRIGGER_TIME (actual)
  - ORTH_SHARD_INDEX, ORTH_SHARD_TOTAL
- Add i18n support for new UI elements (en, zh_CN, zh_TC)

For immediate manual triggers, schedule_time remains NULL.
For scheduled triggers, schedule_time reflects the logical execution time.

Co-authored-by: Cursor <cursoragent@cursor.com>